# ai_reduce_color_for_retro_pc

./: .gitattributes  README.md  code_sample.py  requirements.txt  requirements_work.txt  spec.md
msxfilter/: README.md  pyproject.toml
msxfilter/palettes/: msx15.txt
msxfilter/src/msxfilter/: __init__.py  cli.py  io.py  pipeline.py  rules.py  ui.py
palettes/: msx15.txt  msx95.txt
